syntax = "proto3";

option java_package = "com.example.protodatastore";
option java_multiple_files = true;

message UserPreferences {
  string first_name = 1;
  string last_name = 2;
  string city = 3;
  string profile_pic = 4;
  string date_registered = 5;
  int64 age = 6;
}